--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,8 @@
     
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="../src/assets/js/main.js"></script>
+  <!-- <script src="../src/assets/js/main.js"></script>
+  <script src="../src/assets/js/table2excel.js"></script> -->
   </body>
 
 </html>
